s23437-lukasz-bosak/cw4/cw4.txt
Ad 1. Napisz program obliczający sume liczb wprowadzonych przez urzytkownika i wypisujacy wynik na standardowe wyjscie.

moj kod:

#include <stdio.h>

int main(){

int suma = 0;
int input = 0;

while(scanf("%d\n, &input") > 0) {
    suma += input;

}

printf("%d\n", suma);


return 0;
}

kompilowanie : 

ubuntu@bss-ubu1804:~/Desktop/c/cw4$ gcc -Wall -ansi -pedantic -o suma1 suma1.cpp  // suma1 to plik wykonywalny, suma1.cpp to plik żrodlowy.
suma1.cpp: In function ‘int main()’:
suma1.cpp:8:27: warning: format ‘%d’ expects a matching ‘int*’ argument [-Wformat=]
 while(scanf("%d\n, &input") > 0) {
                           ^
ubuntu@bss-ubu1804:~/Desktop/c/cw4$ suma1
suma1: command not found
ubuntu@bss-ubu1804:~/Desktop/c/cw4$ ./suma1
1
2
3Segmentation fault (core dumped) // wyrzuca mi błąd.

Ad 2.

Przerób ten program tak, aby wartosć była zwracana jako kod zakonczenia programu.

#include <stdio.h>

int main(){

int suma = 0;
int input = 0;

while(scanf("%d\n, &input") > 0) {
    suma += input;

}

printf("%d\n", suma);


return suma;
}


int main(){

int suma = 0;
int input = 0;

while(scanf("%d\n, &input") > 0) {
    suma += input;

}

printf("%d\n", suma);


return suma;   // w tej linijce wystarczyło zamienic return 0 na return suma;
}


Zad 3.

Napisz program wyświetlający tradycyjna choinkę o zadanej wysokości.

#include <stdio.h>
#include <stdlib.h>
int main(int argc, char** argv) {

// int i=0;    i musi byc zdefiniowane ponad pętla.
   
//    for(i=0; i<argc; i++){
//        printf("%d\n", atoi(argv[i]));
//   }


if(argc==2){
    int i=0;
    int j=0;
    int wiersze=atoi(argv[1]);
    printf("Wiersze: %d\n", wiersze);
        for(i=0;i<wiersze;i++){
            for(j=0;j<wiersze-i;j++){
                printf(" ");
            }
            for(j=0;j<i*2-1;j++){
            printf("*");
        }
        printf("\n");
    }
}

    return 0;
    
}

kompilacja i uruchomienie w terminalu:

ubuntu@bss-ubu1804:~/Desktop/c/cw4$ gcc -Wall -ansi -pedantic -o zadanie2 zadanie2.cpp
ubuntu@bss-ubu1804:~/Desktop/c/cw4$ ./zadanie2 5
Wiersze: 5
     
    *
   ***
  *****
 *******
ubuntu@bss-ubu1804:~/Desktop/c/cw4$ 

działa;

Zadania z IO

IO1;

napisz program wczytujacy z pliku tekstowego ciag liczb:



#include <stdio.h>
#include <stdlib.h>

int main(int argc, char *argv[]){
    FILE *f = fopen("plik.txt", "r");
    int i;
    int loop;
    int *liczby;

    if(f == NULL){
        return 1;
    }

fscanf(f, "%d\n", i);
liczby = malloc(i * sizeof(i));

for ( loop = 0 ; loop < i; loop++){
    int a;
    fscanf(f, "%d\n", a);
    liczby[loop] = a;
}

if(f != NULL){
fclose(f);
}

for(; loop > 0 ; loop--){
    int a = liczby[loop];
    printf("%d\n", a);
}


if (liczby != NULL) {
    free(liczby);
}

return 0;

}

wyrzuca mi blad:

ubuntu@bss-ubu1804:~/Desktop/c/cw4$ gcc -Wall -ansi -pedantic -o zadanie3 zadanie3.cpp
zadanie3.cpp: In function ‘int main(int, char**)’:
zadanie3.cpp:14:20: warning: format ‘%d’ expects argument of type ‘int*’, but argument 3 has type ‘int’ [-Wformat=]
 fscanf(f, "%d\n", i);
                    ^
zadanie3.cpp:15:16: error: invalid conversion from ‘void*’ to ‘int*’ [-fpermissive]
 liczby = malloc(i * sizeof(i));
          ~~~~~~^~~~~~~~~~~~~~~
zadanie3.cpp:19:24: warning: format ‘%d’ expects argument of type ‘int*’, but argument 3 has type ‘int’ [-Wformat=]
     fscanf(f, "%d\n", a);
                        ^
ubuntu@bss-ubu1804:~/Desktop/c/cw4$ 